# lowrescoder

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  AGENTS_CONVERSATION.MD  AGENT_COMMUNICATION_RULES.md  CLAUDE.md  DEFERRED_PENDING_TODO.md  EXECUTION_CHECKLIST.md  Makefile  PLAN.md  README.md  TESTING.md  bash.exe.stackdump  bugs.md  build.bat  build.sh  current_directives.md  deep-research-report (2).md  deep-research-report.md  harness-improvement-proposal-v2-2026-04-08.md  harness_starter_prompt_v2.md  modular_migration_plan.md  modular_migration_todo.md  north-star.md  package-lock.json  package.json  project_overview.md  pyproject.toml  rust_migration_plan.md  rust_migration_todo.md  rust_tui_migration_status.md
.claude/: settings.local.json
ailogd/: 02-schema.md  04-phase1-parsers.md  06-phase3-ollama-proxy.md  07-phase4-mitmproxy.md  09-nitrite-extractor.md  11-testing.md  12-risks-security.md  README.md
autocode/: .gitignore  AGENTS_CONVERSATION.MD  Makefile  TESTING.md  autocode.bat  autocode.spec  build.bat  pyproject.toml
autocode/rtui/: Cargo.toml  README.md
autocode/rtui/src/: main.rs
autocode/rtui/src/backend/: connection.rs  mod.rs  process.rs  pty.rs
autocode/rtui/src/render/: markdown.rs  mod.rs  view.rs
autocode/rtui/src/rpc/: bus.rs  codec.rs  mod.rs  protocol.rs  schema.rs
autocode/rtui/src/state/: mod.rs  model.rs  reducer.rs  reducer_tests.rs
autocode/rtui/src/ui/: composer.rs  editor.rs  event_loop.rs  history.rs  mod.rs  spinner.rs  textbuf.rs
autocode/rtui/tests/: decision_tui_textarea.rs  spike_linescodec.rs
autocode/rtui/tests/rpc-conformance/fixtures/: approval_and_ask_user.jsonl  session_management.jsonl  startup_chat.jsonl
benchmarks/: .gitignore  EVALUATION.md  README.md  STATUS.md  benchmark-matrix.json  benchmark_runner.py  docker_helpers.py  prepare_tui_benchmark_run.py  pyproject.toml  run_all_benchmarks.sh  run_b7_b30_sweep.sh  test_gateway.sh  tui_benchmark_driver.py
benchmarks/B6-react-calculator/: package-lock.json  package.json
benchmarks/B6-react-calculator/public/: index.html
benchmarks/B6-react-calculator/src/: App.jsx  LandingPage.jsx  ScientificCalculator.jsx  UnitConverter.jsx  main.jsx
benchmarks/adapters/: __init__.py  autocode_adapter.py  base.py  claude_adapter.py  codex_adapter.py  command_sync.py  harbor_adapter.py  harbor_metadata.yaml  harbor_runner.py
benchmarks/benchmarks/: EVALUATION.md  STATUS.md  run_calculator_benchmark.py
benchmarks/benchmarks/B6-react-calculator/src/: CurrencyConverter.jsx  RegularCalculator.jsx
benchmarks/benchmarks/adapters/: autocode_adapter.py
benchmarks/e2e/: run_scenario.py  scenario_contract.py  scoring.py
benchmarks/e2e/fixtures/bugfix-seed/: package.json
benchmarks/e2e/fixtures/bugfix-seed/src/: utils.js
benchmarks/e2e/fixtures/bugfix-seed/tests/: index.test.js
benchmarks/e2e/scenarios/: __init__.py  cli_tool.py
benchmarks/tests/: conftest.py  test_b15_b29_benchmark_assets.py  test_benchmark_adapters.py  test_benchmark_runner.py  test_command_sync.py  test_docker_helpers.py  test_harbor_adapter.py  test_prepare_tui_benchmark_run.py  test_tui_benchmark_driver.py
bugs/: bugs.md  codex-tui-issue-inventory.md
docs/: .gitignore  agent_to_agent_comms_setup_guide.md  architecture.md  benchmark-guide.md  benchmark-tui-runbook.md  competitive-intelligence-2026.md  features_behavior.md  plan.md  requirements_and_features.md  session-onramp.md  spec.md
ollama/: Modelfile.qwen3-coder-next
scripts/: Modelfile.glm-4.7-flash-bench  agent-log.py  bench_tui.py  benchmark_runner.py  council.sh  docker_helpers.py  probe_patch_stdout.py  run_all_benchmarks.sh  run_e2e_benchmark.ps1  (+3 more)
(+1372 files in other folders)
