[project]
name = "autocode-workspace"
version = "0.1.0"
description = "AutoCode workspace — superproject for submodule-based development"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = ["autocode", "benchmarks"]

[tool.uv.sources]
autocode = { path = "autocode", editable = true }
autocode-benchmarks = { path = "benchmarks", editable = true }

[tool.pytest.ini_options]
testpaths = ["autocode/tests", "benchmarks/tests"]
markers = [
    "integration: marks tests requiring external services",
    "benchmark: marks benchmark tests",
]
