[package]
name = "autocode-tui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
shell-words = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
